# mte-toolbox

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  configuration.cpp  configuration.h  configuration.ui  deviceinfo.cpp  deviceinfo.h  deviceinfo.ui  install-qt-noninteractive.qs  install_manifest.txt  logfile.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mte-toolbox  utilities.cpp  utilities.h  utilities.ui  version.h.in
.github/workflows/: build-docker-image.yml  ci.yml
docker/: Dockerfile  Dockerfile.save
mte-toolbox_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
mte-toolbox_autogen/EWIEGA46WW/: moc_configuration.cpp  moc_configuration.cpp.d  moc_deviceinfo.cpp  moc_deviceinfo.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_utilities.cpp  moc_utilities.cpp.d
mte-toolbox_autogen/include/: ui_configuration.h  ui_deviceinfo.h  ui_mainwindow.h  ui_utilities.h
